07-microservices/currency-conversion-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: currency-conversion
  labels:
    app: currency-conversion
spec:
  replicas: 1
  selector:
    matchLabels:
      app: currency-conversion
  template:
    metadata:
      labels:
        app: currency-conversion
    spec:
      containers:
      - name: currency-conversion
        image: gcr.io/ravi-kubernetes-lab/currency-conversion-sk:v6
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: currency-conversion
  labels:
    app: currency-conversion
spec:
  type: NodePort
  ports:
  - port: 8080
    protocol: TCP
  selector:
    app: currency-conversion
