07-microservices/currency-exchange-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    prometheus.io/scrape: 'true'
    prometheus.io/path: '/manage/prometheus'
    prometheus.io/port: '8080'
  name: currency-exchange
  labels:
    app: currency-exchange
spec:
  replicas: 1
  selector:
    matchLabels:
      app: currency-exchange
  template:
    metadata:
      labels:
        app: currency-exchange
    spec:
      containers:
      - name: currency-exchange
        image: gcr.io/ravi-kubernetes-lab/currency-exchange-sk:v5
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    prometheus.io/scrape: 'true'
    prometheus.io/path: '/manage/prometheus'
    prometheus.io/port: '8080'
  name: currency-exchange
  labels:
    app: currency-exchange
spec:
  type: NodePort
  ports:
  - port: 8080
    protocol: TCP
  selector:
    app: currency-exchange
